--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -43,3 +43,9 @@ body {
     margin: 1px 0;
     border-radius: 4px;
 }
+
+.shaded {
+  border-top: 1px dashed #e7e7e7;
+  background-color: #fbfbfb;
+  color: #757575;
+}
