Add extra information to promotions

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,6 +9,10 @@
   text-align: center;
   width: 100%;
   text-shadow: 1.5px 1.5px 7px #222222;
+
+  a {
+    color: white;
+  }
 }
 
 .super-hero-unit figure figcaption h1 {
