--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -15,5 +15,5 @@
     = f.file_field :picture, class: "form-control"
   .form-group
     = f.label :bio
-    = f.text_area :bio, class: "form-control markdown"
+    ~ f.text_area :bio, class: "form-control markdown"
   = f.submit "Update", class: "btn btn-success pull-right"
