--- a/app/views/partials/chat/_chat_button.haml
+++ b/app/views/partials/chat/_chat_button.haml
@@ -1,1 +1,3 @@
-%btn.btn.btn-danger#open_support Need help? Click to open chat
+%btn.btn.btn-danger#open_support
+  %i.fa.fa-comment-o
+  Need help? Click to open chat
