--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1,7 +1,43 @@
 .messages {
   height: 200px;
   overflow-y: auto;
+
+  .message {
+    width: 80%;
+    padding: 8px;
+    margin-bottom: 8px;
+    border-radius: 10px;
+
+    background-color: #f1f1f1;
+    color: #000000;
+
+    animation: appear 0.4s ease;
+
+    &.self {
+      background-color: #50a0b2;
+      color: #ffffff;
+      margin-left: 20%;
+    }
+
+    .sender {
+      font-weight: bold;
+    }
+  }
 }
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 
 #open_support {
   position: fixed;
