--- a/app/views/days/edit.haml
+++ b/app/views/days/edit.haml
@@ -3,10 +3,10 @@
     %h1.heading-title.pull-left
       Day Color
       %small
-        Last updated
-        = time_ago_in_words @day.updated_at.to_i
-        ago
+        for
+        = @day.date.strftime("%A %d %B, %Y")
   = form_tag day_path, method: :patch do
     = label_tag :color
-    = select_tag(:color, options_for_select(['Red Day', 'White Day', 'No Color'], @day.color))
+    - value = @day.color.nil? ? 'No Color' : @day.color
+    = select_tag(:color, options_for_select(['Red Day', 'White Day', 'No Color'], value))
     = submit_tag 'Update Color'
