--- a/app/views/promotions/_form.haml
+++ b/app/views/promotions/_form.haml
@@ -6,6 +6,9 @@
     = f.label :picture
     = f.file_field :picture, class: "form-control"
   .form-group
+    = f.label :enabled
+    = f.check_box :enabled
+  .form-group
     = f.label :text
     = f.text_field :text, placeholder: "Text", class: "form-control"
   .form-group
