Enable auditing on promotions

--- a/app/views/promotions/index.haml
+++ b/app/views/promotions/index.haml
@@ -16,4 +16,4 @@
             %td
               - unless promotion.enabled
                 %span.label.label-warning Hidden
-              = link_to promotion.text, edit_promotion_path(promotion)
+              = link_to promotion.text, promotion_path(promotion)
