--- a/app/views/partials/_footer.haml
+++ b/app/views/partials/_footer.haml
@@ -18,7 +18,7 @@
       %li
         %i.fa.fa-ellipsis-v
       %li#google_translate_element
-        %script{:src => "//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit", :type => "text/javascript"}
+        %script{:defer => "", :src => "//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit", :type => "text/javascript"}
 
 :javascript
   function googleTranslateElementInit() {
