--- a/app/views/integrations/index.haml
+++ b/app/views/integrations/index.haml
@@ -1,24 +1,17 @@
-.page-wrapper
-  %header.page-heading.clearfix
-    %h1.heading-title.pull-left Integrations
-    = link_to "Create", new_integration_path, class: "btn btn-primary pull-right"
-  .page-content
-    .table-responsive
-      %table.table
-        %thead
-          %tr
-            %th Provider
-            %th Failure Count
-            %th Properties
-        %tbody
-          - @integrations.each do |integration|
-            - provider = integration.create_provider
-            %tr
-              %td
-                %i.fa{class: "fa-#{provider.fa_icon}"}
-                = link_to provider.friendly_name, edit_integration_path(integration)
-              %td= integration.failures.count
-              %td
-                - props = integration[:properties]
-                - props[:token] = "[hidden]" unless props[:token].nil?
-                %kbd= props.to_json.truncate(120)
+%ol.breadcrumb
+  %li.active Integrations
+  = link_to new_integration_path, class: 'pull-right' do
+    %i.fa.fa-plug
+    Create Integration
+
+- @integrations.each do |integration|
+  .integration-provider
+    .meta
+      .icon
+        %i.fa{class: "fa-#{integration.provider.fa_icon}"}
+      .info
+        .name
+          = link_to integration.provider.friendly_name, edit_integration_path(integration)
+          - if integration.failures.count > 0
+            %span.label.label-danger= pluralize(integration.failures.count, 'failure')
+        .description= integration.create_provider.describe
