--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -34,6 +34,37 @@
   margin-bottom: 8px;
 }
 
+.integration-provider {
+  padding: 15px 30px;
+  margin-bottom: 16px;
+  background-color: #ffffff;
+  border: 2px solid #f4f4f4;
+
+  display: flex;
+  justify-content: space-between;
+
+  .meta {
+    display: flex;
+    .icon {
+      font-size: 42px;
+      margin-right: 16px;
+    }
+    .info {
+      font-size: 16px;
+      margin: auto;
+      .name {
+        font-weight: bold;
+      }
+    }
+  }
+
+  a.btn {
+    color: white;
+    background-color: black;
+    margin: auto 0;
+  }
+}
+
 .promotion-preview {
   padding: 15px 30px;
   background-color: #ffffff;
