Update integration icons

--- a/app/views/admin/index.haml
+++ b/app/views/admin/index.haml
@@ -28,5 +28,5 @@
   %i.fa.fa-home
   Manage Promotions
 = link_to integrations_path, class: "btn btn-admin" do
-  %i.fa.fa-comment
+  %i.fa.fa-plug
   Manage Integrations
