--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -72,7 +72,7 @@
             = link_to t('menu.account.sign_out'), destroy_user_session_path, :method => :delete
         - else
           %li.nav-item
-            = link_to user_google_oauth2_omniauth_authorize_path do
+            = link_to user_google_oauth2_omniauth_authorize_path, class: 'btn-loader' do
               = t('menu.account.sign_in_with')
               %i.fa.fa-google-plus-square
         - if user_signed_in?
