--- a/app/views/activities/show.haml
+++ b/app/views/activities/show.haml
@@ -4,8 +4,8 @@
     = render partial: "partials/modtools", locals: {actions: @actions}
     %ul.nav.navbar-nav.pull-right
       %li
-        -# if user_signed_in?
-          - if @activity.subscriber? current_user
+        -# if Current.user
+          - if @activity.subscriber? Current.user
             %a{:href => unsubscribe_activity_path(@activity), data: {method: 'post'}} Unsubscribe
           - else
             %a{:href => subscribe_activity_path(@activity), data: {method: 'post'}} Subscribe
