--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -12,8 +12,8 @@
     = render partial: "partials/modtools", locals: {actions: @actions}
     %ul.nav.navbar-nav.pull-right
       %li
-        - if user_signed_in?
-          - if @course.subscriber? current_user
+        - if Current.user
+          - if @course.subscriber? Current.user
             %a{:href => unsubscribe_course_path(@course), data: {method: 'post'}} Unsubscribe
           - else
             %a{:href => subscribe_course_path(@course), data: {method: 'post'}} Subscribe
