--- a/app/views/partials/_flash.haml
+++ b/app/views/partials/_flash.haml
@@ -1,7 +1,5 @@
--# We need to filter out Devise's timedout
--# See https://github.com/plataformatec/devise/issues/1777
 #flash
-  - flash.to_hash.except("timedout").each do |key, value|
+  - flash.to_hash.each do |key, value|
     %div{:class => "alert alert-#{bootstrap_alert_class(key)}"}
       %button.close{"data-dismiss" => "alert", :type => "button"} ×
       = value
