--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,10 +16,7 @@
             Actions
             %b.caret
           %ul.dropdown-menu.dropdown-menu-right
-            - if @user == current_user
-              %li= link_to "Edit profile", edit_user_registration_path
-            - else
-              %li= link_to "Edit profile", edit_user_path(@user)
+            %li= link_to "Edit profile", edit_user_path(@user)
             %li= link_to "Edit schedule", user_periods_path(@user)
 
   .row
@@ -35,15 +32,6 @@
                 %i.fa{class: @user.badge.icon}
                 .user-badge{style: "background-color: ##{@user.badge.color};"}
                   = @user.badge.name
-            - if current_user.try(:admin_enabled?)
-              %li.list-group-item
-                %i.fa.fa-clock-o
-                - if @user.last_sign_in_at
-                  Last seen
-                  = time_ago_in_words @user.last_sign_in_at
-                  ago
-                - else
-                  Never signed in
             %li.list-group-item
               %i.fa.fa-envelope
               = @user.email
@@ -56,7 +44,7 @@
         %p.no-bio
           %i.fa.fa-pencil-square-o
           This user does not have a bio.
-  - if user_signed_in?
+  - if Current.user
     .row
       - if @periods.count > 0
         .table-responsive
